# Hora

./: .env.example  .gitignore  AEGIS_OPEN_SOURCE_STACK_AND_BUILD_PLAN.html  CLAUDE.md  DATA_FEED_INTEGRATION_MAP.md  ECFL_Standard_Specification_v1.0.html  FREE_DATA_SOURCES_COMPREHENSIVE_2025.md  HORA.md  QUANTICO_COMPLETE_FEATURE_LIST.md  QUICK_API_REFERENCE.md  Quadratic_Group_Deck 2.html  SENTINEL_SETUP.md  SETUP_INSTRUCTIONS.md  docker-compose.yml  launch.sh  netlify.toml  package.json  patch.py  pnpm-lock.yaml  update_exchange.mjs
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: codeql.yml
api/: .env.example  DEPLOYMENT_CHECKLIST.md  FILES.md  INDEX.txt  README.md  STARTUP.md  SUMMARY.txt  __init__.py  data_feeds.py  fred_feed.py  news_feed.py  polygon_feed.py  requirements.txt  server.py  test_api.py
apps/empire/: capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/hora/: .env.example  .gitignore  FOUNDATIONS_F0_DOCUMENTATION.md  capacitor.config.ts  (+7 more)
apps/hora/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
apps/hora/src-tauri/icons/: README.md
apps/hora/src-tauri/src/: lib.rs
data_feeds/: __init__.py  ais_data.py  market_data.py  ml_benchmarks.py  run_all_engines.py
docs/: GAME_DESIGN.md  VISUAL_DIRECTION.md
scripts/: fetchWikidataNodes.mjs  generateInfrastructure.mjs  load_test_45k.yml  seed_simdata.py  test-systems.js
sentinel/: MANIFEST.md  __init__.py  alerts_log.json  state.json
terminal/: index.html  serve.py
tests/: test_critical_math.py
(+588 files in other folders)
