[package]
name = "aegis-empire"
version = "1.0.0"
description = "AEGIS Empire — Build your financial empire."
authors = ["Quadratic <alecbdcarvalho@gmail.com>"]
license = "Proprietary"
repository = ""
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aegis_empire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Release profile tuned for small binaries and fast startup.
[profile.release]
panic = "abort"      # Strip panic-unwind infrastructure
codegen-units = 1    # Allow LLVM to inline across the whole crate
lto = true           # Link-time optimization
opt-level = "s"      # Optimize for size
strip = true         # Strip debug symbols from the binary
